--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
+
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
@@ -596,8 +591,20 @@ html, body {
     bottom: 10%;
 }
 
+#skills span h4 {
+    display: inline-block;
+    border: 2px solid rgb(212, 212, 212);
+    padding: 15px 20px;
+    background-color: #8d8b8b;
+    color: black;
+}
 
-@media (max-width:800px) {
+._canvas_container {
+    z-index: 999 !important;
+    pointer-events: none;
+}
+
+@media only screen and (max-width:800px) {
 
     .loading {
         gap: 20px;
@@ -757,7 +764,7 @@ html, body {
 
 }
 
-@media (max-width:680px) {
+@media only screen and (max-width:680px) {
 
     #cursor {
         display: none;
@@ -773,7 +780,7 @@ html, body {
 
 }
 
-@media (max-width:480px) {
+@media only screen and (max-width:480px) {
 
     .loading {
         gap: 20px;
@@ -978,15 +985,17 @@ html, body {
 
 
 
-#skills span h4 {
-    display: inline-block;
-    border: 2px solid rgb(212, 212, 212);
-    padding: 15px 20px;
-    background-color: #8d8b8b;
-    color: black;
-}
-
-._canvas_container {
-    z-index: 999 !important;
-    pointer-events: none;
+.example {
+    display: -ms-grid;
+    display: grid;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+    transition: all .5s;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background: -webkit-gradient(linear, left top, left bottom, from(white), to(black));
+    background: -o-linear-gradient(top, white, black);
+    background: linear-gradient(to bottom, white, black);
 }
