--- a/style.css
+++ b/style.css
@@ -558,6 +558,8 @@ html, body {
     text-transform: uppercase;
     font-size: 5vw;
     opacity: 0.8;
+    letter-spacing: -3px;
+    font-weight: 500;
   }
 
   .resume {
